@@ -1,20 +1,23 @@
 package com.fabian_mera.login_modyo.auth;
 
-import com.fabian_mera.login_modyo.exceptions.AccessDeniedHandlerException;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
-import static com.fabian_mera.login_modyo.auth.URLFrontEnd.URL_FRONTEND_SESSION;
 import static com.fabian_mera.login_modyo.auth.Helpers.CONTENT_TYPE;
 import static com.fabian_mera.login_modyo.auth.Helpers.HEADER_AUTHORIZATION;
 import static com.fabian_mera.login_modyo.auth.Helpers.LOGIN_URL;
@@ -23,16 +26,19 @@ import static com.fabian_mera.login_modyo.auth.Helpers.LOGIN_URL;
 @Configuration
 @EnableWebSecurity
 public class SpringConfigurityConfig {
-    private final AccessDeniedHandlerException accessDeniedHandlerException;
+    private final JwtAuthFilter jwtAuthorizationFilter;
 
-    public SpringConfigurityConfig(AccessDeniedHandlerException accessDeniedHandlerException) {
-        this.accessDeniedHandlerException = accessDeniedHandlerException;
+    public SpringConfigurityConfig(JwtAuthFilter jwtAuthorizationFilter) {
+        this.jwtAuthorizationFilter = jwtAuthorizationFilter;
     }
+
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http.cors(Customizer.withDefaults())
-                .csrf(csrf -> csrf.disable())
+                .csrf(AbstractHttpConfigurer::disable)
+                .sessionManagement(sessionManagement -> sessionManagement.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .addFilterBefore(jwtAuthorizationFilter, UsernamePasswordAuthenticationFilter.class)
                 .authorizeHttpRequests(auth ->
                         auth.requestMatchers(LOGIN_URL, "/users/**", "/swagger-ui.html", "/swagger-ui/**", "/v3/api-docs/**")
                                 .permitAll()
@@ -43,16 +49,28 @@ public class SpringConfigurityConfig {
         return http.build();
     }
 
-    @Bean
+   /* @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(URL_FRONTEND_SESSION));
+        configuration.setAllowedOrigins(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
         configuration.setAllowedHeaders(Arrays.asList(HEADER_AUTHORIZATION, CONTENT_TYPE));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }*/
+
+    @Bean
+    public CorsFilter corsFilter() {
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowCredentials(true);
+        config.addAllowedOrigin("http://localhost:8081");
+        config.addAllowedHeader("*");
+        config.addAllowedMethod("*");
+        source.registerCorsConfiguration("/**", config);
+        return new CorsFilter(source);
     }
 }
 
